# wpfx

./: Cargo.toml  README.md
.github/workflows/: audit.yaml  general.yaml
src/: main.rs
src/lib/: commands.rs  config.rs  errors.rs  mod.rs
