[package]
name = "wpfx"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.10", features = ["display"] }
